--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,26 +5,30 @@ phases:
     runtime-versions:
       python: 3.7
     commands:
-      # Install AWS CLI
-      - pip install awscli
+      - pip install awscli jq
 
   pre_build:
     commands:
-      # Retrieve private keys from Secrets Manager
       - aws secretsmanager get-secret-value --secret-id dj/ssh-private-key --query SecretString --output text | jq -r '.git_private_key' > ~/.ssh/id_rsa_github
       - aws secretsmanager get-secret-value --secret-id ec2/ssh-private-key --query SecretString --output text | jq -r '.ec2_private_key' > ~/.ssh/id_rsa_ec2
       - chmod 600 ~/.ssh/id_rsa_github
       - chmod 600 ~/.ssh/id_rsa_ec2
       - ssh-keyscan github.com >> ~/.ssh/known_hosts
       - ssh-keyscan 54.163.27.25 >> ~/.ssh/known_hosts
+      - echo "Verifying SSH key for GitHub"
+      - cat ~/.ssh/id_rsa_github
+      - echo "Verifying SSH key for EC2"
+      - cat ~/.ssh/id_rsa_ec2
 
   build:
     commands:
-      # Clone the private repository
+      - eval $(ssh-agent -s)
+      - ssh-add ~/.ssh/id_rsa_github
       - git clone git@github.com:prathamesh5145/Task.git
       - cd Task
 
   post_build:
     commands:
-      # Deploy to EC2 instance
+      - eval $(ssh-agent -s)
+      - ssh-add ~/.ssh/id_rsa_ec2
       - scp -i ~/.ssh/id_rsa_ec2 -r . ec2-user@54.163.27.25:/var/www/html/
