--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,3 +13,4 @@ phases:
       - aws secretsmanager get-secret-value --secret-id prod1-ssh-key --query SecretString --output text > prod-key.pem
       - chmod 400 prod-key.pem
       - scp -i prod-key.pem -o StrictHostKeyChecking=no Task/* ec2-user@3.95.11.99:/var/www/html/
+      #angapi
