--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,13 @@ phases:
       - echo Installing dependencies...
   build:
     commands:
-      - echo "Deploying to EC2..."
-      - git clone https://github.com/prathamesh5145/Task.git
+      - echo "Downloading the encrypted file from S3"
+      - mkdir encrypted
+      - aws s3 cp s3://prathameshencrypted/prathamesh.txt.enc encrypted/prathamesh.txt.enc
+      - echo "Downloading the private key of deployable instance"
       - aws secretsmanager get-secret-value --secret-id prod1-ssh-key --query SecretString --output text > prod-key.pem
       - chmod 400 prod-key.pem
-      - scp -i prod-key.pem -o StrictHostKeyChecking=no Task/* ec2-user@3.95.11.99:/var/www/html/
-      #angapi
+      - echo "Decrypting the encrypted data"
+      - mkdir decrypted
+      - aws kms decrypt --ciphertext-blob fileb://prathamesh.txt.enc --output text --query Plaintext | base64 --decode > decrypted/tushar
+      - scp -i prod-key.pem -o StrictHostKeyChecking=no decrypted/* ec2-user@3.95.11.99:/tmp/
